# robigalia-rust-sel4

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: alloc.rs  cspace.rs  domain.rs  endpoint.rs  error.rs  irq.rs  lib.rs  macros.rs  notification.rs  thread.rs
src/arch/: arm.rs  mod.rs  x86.rs  x86_64.rs
