# Copyright (c) 2015 The Robigalia Project Developers
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license <LICENSE-MIT
# or http://opensource.org/licenses/MIT>, at your option. All files in the
# project carrying such notice may not be copied, modified, or distributed
# except according to those terms.
[package]
name = "sel4"
version = "0.0.12"
authors = ["Corey Richardson <corey@octayn.net>"]
description = "High-level Rust interface to the seL4 kernel"
documentation = "https://doc.robigalia.org/sel4"
repository = "https://gitlab.com/robigalia/sel4"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
unstable = []

[dependencies]
sel4-sys = { version = "0.0.28", path = "../sel4-sys" }
